k8s-helm-chart-part/templates/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: mohamedsambo/flask-app:3.0.0
        ports:
        - containerPort: 5000
      volumes:
      - name: app-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: task
spec:
  selector:
    app: app
  ports:
  - port: 8080
    targetPort: 5000
    name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-app
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /app
    rewrite:
      uri: /
    route:
    - destination:
        host: app.task.svc.cluster.local
        port:
          number: 8080
