k8s-helm-chart-part/templates/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-datasource-volume
          mountPath: /etc/grafana/provisioning/datasource.yml
          subPath: datasource.yml
      volumes:
      - name: grafana-datasource-volume
        configMap:
          name: grafana-datasource

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: task
spec:
  selector:
    app: grafana
  ports:
  - port: 8080
    targetPort: 3000
    name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-grafana
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana.task.svc.cluster.local
        port:
          number: 8080
